log
Thu 21 Mar 2024 08:12:16 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
2434d7e
Thu 21 Mar 2024 08:15:05 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:20: error: implicit declaration of function ‘head’ [-Werror=implicit-function-declaration]
   62 |    int *elemento = head(L);
      |                    ^~~~
exercises.c:62:20: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
8549ce1
Thu 21 Mar 2024 08:17:48 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
708ee6f
Thu 21 Mar 2024 08:18:06 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
e9dd0c2
Thu 21 Mar 2024 08:22:19 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
7c11847
Thu 21 Mar 2024 08:26:28 PM UTC: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:107:9: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  107 |   *dato = top(PA);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
a0cda67
Thu 21 Mar 2024 08:26:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
bbaa55a
Thu 21 Mar 2024 08:27:25 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 40/70
009489c
Thu 21 Mar 2024 08:30:17 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 40/70
21640ff
Thu 21 Mar 2024 08:30:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
45725f3
Thu 21 Mar 2024 08:40:53 PM UTC: 
 exercises.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:133:18: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  133 |          if (pila->top == '\0') return 0;
      |                  ^~
exercises.c:135:35: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  135 |        char topChar = *(char*)pila->top->data;
      |                                   ^~
Compilation failed
3a15686
Thu 21 Mar 2024 08:41:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:133:24: error: comparison between pointer and zero character constant [-Werror=pointer-compare]
  133 |          if (top(pila) == '\0') return 0;
      |                        ^~
exercises.c:133:14: note: did you mean to dereference the pointer?
  133 |          if (top(pila) == '\0') return 0;
      |              ^
exercises.c:135:35: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  135 |        char topChar = *(char*)pila->top->data;
      |                                   ^~
cc1: all warnings being treated as errors
Compilation failed
c37f15b
Thu 21 Mar 2024 08:41:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:129:27: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  129 |          push(pila, cadena[i]);
      |                     ~~~~~~^~~
      |                           |
      |                           char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:133:24: error: comparison between pointer and zero character constant [-Werror=pointer-compare]
  133 |          if (top(pila) == '\0') return 0;
      |                        ^~
exercises.c:133:14: note: did you mean to dereference the pointer?
  133 |          if (top(pila) == '\0') return 0;
      |              ^
exercises.c:135:35: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  135 |        char topChar = *(char*)pila->top->data;
      |                                   ^~
cc1: all warnings being treated as errors
Compilation failed
46d01d4
Thu 21 Mar 2024 08:42:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:133:24: error: comparison between pointer and zero character constant [-Werror=pointer-compare]
  133 |          if (top(pila) == '\0') return 0;
      |                        ^~
exercises.c:133:14: note: did you mean to dereference the pointer?
  133 |          if (top(pila) == '\0') return 0;
      |              ^
exercises.c:135:35: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  135 |        char topChar = *(char*)pila->top->data;
      |                                   ^~
cc1: all warnings being treated as errors
Compilation failed
a4ed740
Thu 21 Mar 2024 08:42:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:133:24: error: comparison between pointer and zero character constant [-Werror=pointer-compare]
  133 |          if (top(pila) == '\0') return 0;
      |                        ^~
exercises.c:133:14: note: did you mean to dereference the pointer?
  133 |          if (top(pila) == '\0') return 0;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
a62f23d
Thu 21 Mar 2024 08:42:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
c0a33e5
Thu 21 Mar 2024 08:44:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:23: error: initialization of ‘char’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  135 |        char topChar = top(pila);
      |                       ^~~
cc1: all warnings being treated as errors
Compilation failed
3cb7a90
Thu 21 Mar 2024 08:45:20 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
433ccd0
Thu 21 Mar 2024 08:45:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1fa60a8
Thu 21 Mar 2024 08:58:48 PM UTC: 
 exercises.c | 25 ++++++++++++-------------
 1 file changed, 12 insertions(+), 13 deletions(-)
 tests:  4|1
total_score: 50/70
ddfa8b4
Thu 21 Mar 2024 08:59:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
e62a382
Thu 21 Mar 2024 09:01:28 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  4|1
total_score: 50/70
05eb11c
Thu 21 Mar 2024 09:02:22 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:9: error: expected ‘(’ before ‘{’ token
  135 |         {
      |         ^
      |         (
exercises.c:137:36: error: ‘topChar’ undeclared (first use in this function)
  137 |           if ((cadena[i] == ')' && topChar != '(') || (cadena[i] == ']' && topChar != '[') ||            (cadena[i] == '}' && topChar != '{'))
      |                                    ^~~~~~~
exercises.c:137:36: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
148a453
Thu 21 Mar 2024 09:03:08 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|1
total_score: 50/70
1ff0eb4
Thu 21 Mar 2024 09:06:02 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:49: error: expected ‘)’ before ‘{’ token
  135 |         if ((cadena[i] == ')' && topChar != '(')
      |            ~                                    ^
      |                                                 )
  136 |         {
      |         ~                                        
exercises.c:139:7: error: expected expression before ‘}’ token
  139 |       }
      |       ^
Compilation failed
2c98c8d
Thu 21 Mar 2024 09:06:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
13811ba
Thu 21 Mar 2024 09:10:29 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|1
total_score: 50/70
4b21c3c
Thu 21 Mar 2024 09:16:27 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
f136124
